--- a/surfhouse/index.html
+++ b/surfhouse/index.html
@@ -6,6 +6,7 @@
     <title>surfhouse</title>
   </head>
   <body>
+    <!-- Commet -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
